# Wuhu_Games/backend/routes/reservations.routes.js
@@ -1,0 +1,9 @@
+import { Router } from "express"
+import { cancelReservation, getUserReservations } from "../controllers/reservations.controller.js"
+
+const router = Router()
+
+router.get("/:username", getUserReservations)
+router.delete("/", cancelReservation)
+
+export default router
